--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Utility</title>
   </head>
-  <body>
+  <body class="dark-theme">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
