--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="//at.alicdn.com/t/font_2143783_iq6z4ey5vu.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Utility</title>
+    <title>UtilityNet</title>
   </head>
   <body class="dark-theme">
     <div id="app"></div>
