--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UtilityNet</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FKQXQSDSLL"></script>
   </head>
   <body class="dark-theme">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FKQXQSDSLL');
+</script>
